# robotic_nerve_us

./: .gitignore  Dockerfile  README.md  docker-compose.sh  docker-compose.yaml  install.sh  pyproject.toml  requirements.txt
MRI/: workspace_1.iws
MRI/Labels/: 00001_joints.txt  00002_joints.txt  00003_joints.txt
MRI/Labels/final/: Colors.xlsx
catkin_ws/: .gitignore
catkin_ws/src/scan_navigation/: navigation_tutorial.py
icbme_data_preparation/: SimConfig.iws  filter_tracking.py  main.py  modify_tracking.py  save_2d.py  tracking.csv
icbme_data_preparation/imfusion_free/: slice_volume.py
image_navigation/: .gitignore  loss.py  slicing.py  tissue_clustering.py  visualization_utils.py
image_navigation/MRI/Labels/: 00002_bone.nii  00002_labels.nii  Colors.xlsx
image_navigation/envs/: base.py  labelmaps_navigation.py
image_navigation/notebooks/: 0_mri_visual.ipynb  1_simple_clustering.ipynb  2_DBSCAN_clustering.ipynb  3_slicing.ipynb  4_environment.ipynb  DBSCAN_clustering.ipynb  linear_sweep_search.ipynb  mri_visual.ipynb  robot_navigation.ipynb  simple_clustering.ipynb  slicing.ipynb
image_navigation/util/: img_processing.py
nibabel_visualization/: .gitignore  linear_sweep_search.ipynb  mri_visual.ipynb  original_array.txt  robot_navigation.ipynb  transformed_array.txt  visual_label_array.xlsx  visualization_utils.py
nibabel_visualization/notebooks/: mri_visual.ipynb
