[tool.poetry]
name = "robotic-US"
version = "0.1.0"
description = ""
authors = ["Carlo Cagnetta <cagnetta.carlo.98@gmail.com>"]
readme = "README.md"
repository = ""

[tool.poetry.dependencies]
python = "~3.9"
gymnasium = {extras = ["classic-control", "mujoco"], version = "^0.27.1"}
numpy = "^1.21"
mujoco = "^2.3.2"
setuptools = "65.6.3"
importlib = "*"
pathlib = "* "
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
empy = "^3.3.4"
catkin-pkg = "^0.5.2"
rospkg = "^1.5.0"
pyquaternion = "^0.9.9"
natsort = "^8.3.1"
pybind11 = "^2.10.4"
requests = "^2.29.0"
cffi = "1.14.2"
pillow = "^9.5.0"
html-testrunner = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"